fixed parallax image on mobile

--- a/css/creative.css
+++ b/css/creative.css
@@ -156,6 +156,7 @@ body {
 
 header.masthead {
   position: relative;
+  background-image: url("../img/bgimg-1.jpg");
   width: 100%;
   min-height: auto;
   text-align: center;
@@ -165,12 +166,22 @@ header.masthead {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
-.bgimg-1 {
+/*.bgimg-1 {
+  position: relative;
   background-image: url("../img/bgimg-1.jpg");
   min-height: 100%;
-}
+  background-color: #C7342B;
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}*/
+
   header.masthead .header-content {
     position: relative;
     width: 100%;
@@ -201,7 +212,7 @@ header.masthead {
   @media (min-width: 768px) {
     header.masthead {
       height: 100%;
-      min-height: 600px
+      min-height: 600px;
       color: #C7342B;
     }
       header.masthead .header-content {
